Loop detection implemented and tested on a ring graph, multiple experiments parallelism implemented, use parallel to run multiple experiments, install updated for parallel, parallel cited in README and documentation

--- a/Documentation/documentation.tex
+++ b/Documentation/documentation.tex
@@ -296,6 +296,8 @@ The main components of the software are:
 			system, the output must be a CSV in the predefined format.
 \end{itemize}
 
+Parallel execution of experiments thanks to \textit{parallel} \cite{Tange2011a}.
+
 \bibliographystyle{IEEEtran}
 \bibliography{references}
 
