--- a/Documentation/references.bib
+++ b/Documentation/references.bib
@@ -2,3 +2,18 @@
 	author = {Griffin, Timothy G.},
 	title = {{A Finite State Model Update Propagation for Hard-State Path-Vector Protocols}},
 }
+
+@article{Tange2011a,
+  title = {GNU Parallel - The Command-Line Power Tool},
+  author = {O. Tange},
+  address = {Frederiksberg, Denmark},
+  journal = {;login: The USENIX Magazine},
+  month = {Feb},
+  number = {1},
+  volume = {36},
+  url = {http://www.gnu.org/s/parallel},
+  year = {2011},
+  pages = {42-47},
+  doi = {http://dx.doi.org/10.5281/zenodo.16303}
+}
+
